--- a/_config.yml
+++ b/_config.yml
@@ -27,11 +27,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: mapsim
 github_username:  mapsim
-
+repository: mapsim/mapsim.github.io
 # Build settings
-remote_theme: pages-themes/modernist@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+theme: jekyll-theme-cayman
 
 # Exclude from processing.
 # The following items will not be processed, by default.
